# CMake Version
CMAKE_MINIMUM_REQUIRED(VERSION 2.8 FATAL_ERROR)

# Build Type
SET(CMAKE_BUILD_TYPE Debug)
# Build Type Option
SET(CMAKE_C_FLAGS_RELEASE "-Wall -O2")
SET(CMAKE_C_FLAGS_DEBUG "-W -g")
SET(CMAKE_C_FLAGS_COVERAGE "-W -g -fprofile-arcs -ftest-coverage")
SET(CMAKE_EXE_LINKER_FLAGS_COVERAGE "-fprofile-arcs -ftest-coverage")

# Project
PROJECT(php_password_hashing)
SET(MAJOR_VERSION 0)
SET(MINOR_VERSION 1)
SET(BUILD_VERSION 0)
#SET(REVISION_VERSION 0)

# Configure
CONFIGURE_FILE(
  ${PROJECT_SOURCE_DIR}/src/config.h.in
  ${CMAKE_CURRENT_BINARY_DIR}/config.h)
INCLUDE_DIRECTORIES(${CMAKE_CURRENT_BINARY_DIR})

# Source password and Blowfish function
SET(SOURCE_PHP_PASSWORD_HASHING
  ${PROJECT_SOURCE_DIR}/src/password.c
  ${PROJECT_SOURCE_DIR}/src/crypt_blowfish.c)

# Execute
ADD_EXECUTABLE(php_password_hash
  ${PROJECT_SOURCE_DIR}/src/app_hash.c ${SOURCE_PHP_PASSWORD_HASHING})
ADD_EXECUTABLE(php_password_verify
  ${PROJECT_SOURCE_DIR}/src/app_verify.c ${SOURCE_PHP_PASSWORD_HASHING})
ADD_EXECUTABLE(php_password_get_info
  ${PROJECT_SOURCE_DIR}/src/app_get_info.c ${SOURCE_PHP_PASSWORD_HASHING})

# Install
INSTALL_PROGRAMS(/bin FILES ${CMAKE_CURRENT_BINARY_DIR}/php_password_hash)
INSTALL_PROGRAMS(/bin FILES ${CMAKE_CURRENT_BINARY_DIR}/php_password_verify)
INSTALL_PROGRAMS(/bin FILES ${CMAKE_CURRENT_BINARY_DIR}/php_password_get_info)

# Test
FIND_PATH(CUTTER_INCLUDES
  cutter.h
  PATHS ${CUTTER_INCLUDE_PATH} /usr/include /usr/include/cutter)

FIND_LIBRARY(LIBCUTTER_LIBRARIES
  NAMES libcutter cutter
  PATHS ${LIBCUTTER_LIBRARY_PATH} /usr/lib64 /usr/lib)

IF(NOT CUTTER_INCLUDES STREQUAL "CUTTER_INCLUDES-NOTFOUND"
    AND NOT LIBCUTTER_LIBRARIES STREQUAL "LIBCUTTER_LIBRARIES-NOTFOUND")
  ENABLE_TESTING()
  ADD_TEST(Test cutter ${CMAKE_CURRENT_BINARY_DIR})
  SUBDIRS(${PROJECT_SOURCE_DIR}/tests)
ENDIF()
