
INCLUDE_DIRECTORIES(${CUTTER_INCLUDES})

SET(TEST_LIBRARIES "test_${PROJECT_NAME}")
ADD_LIBRARY(${TEST_LIBRARIES} SHARED ${SOURCE_PHP_PASSWORD_HASHING})

ADD_LIBRARY(hash SHARED ${PROJECT_SOURCE_DIR}/tests/hash.c)
TARGET_LINK_LIBRARIES(hash ${TEST_LIBRARIES} ${LIBCUTTER_LIBRARIES})

ADD_LIBRARY(verify SHARED ${PROJECT_SOURCE_DIR}/tests/verify.c)
TARGET_LINK_LIBRARIES(verify ${TEST_LIBRARIES} ${LIBCUTTER_LIBRARIES})

ADD_LIBRARY(get_info SHARED ${PROJECT_SOURCE_DIR}/tests/get_info.c)
TARGET_LINK_LIBRARIES(get_info ${TEST_LIBRARIES} ${LIBCUTTER_LIBRARIES})
